--- a/index.html
+++ b/index.html
@@ -11,17 +11,12 @@
     <title>My Static Website</title>
     <!--REQUIRED STYLE SHEETS-->
     <!-- BOOTSTRAP CORE STYLE CSS -->
-    <link href="./testsite_files/bootstrap.min.css" rel="stylesheet">
-    <!-- FONTAWESOME STYLE CSS -->
-    <link rel="stylesheet" href="./testsite_files/all.css" crossorigin="anonymous">
-    <!-- CUSTOM STYLE CSS -->
-    <link href="./testsite_files/style.css" rel="stylesheet">
-    <!-- GOOGLE FONT -->
-    <link href="./testsite_files/css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+      <script src="js/script.js"></script>
+      <script src="js/jquery-1.10.2.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
     <![endif]-->
 </head>
 
