--- a/index.html
+++ b/index.html
@@ -3,31 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coyote Tracks - Home</title>
+    <title>Coyote Tracks</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Coyote Tracks</h1>
+        <img src="coyotetrackslogo.jpg" alt="Coyote Tracks Logo">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="safety.html">Accessibility Info</a></li>
-                <!-- More links -->
+                <li><a href="/">Home</a></li>
+                <li><a href="/accessibility">Accessibility Info</a></li>
+                <li><a href="/time-management">Time Management</a></li>
+                <li><a href="/login">Login / Sign up</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="intro">
             <h2>Hello Hiker!</h2>
-            <p>(Page introduction)</p>
+            <p>This is your starting point for adventure. Find your hike today!</p>
             <button id="findHikeBtn">Find My Hike</button>
         </section>
-        <!-- More sections -->
+        <aside>
+            <section id="weather">
+                <h3>Weather Warnings</h3>
+                <ul>
+                    <li>Warning 1</li>
+                    <li>Warning 2</li>
+                    <!-- Add more warnings as needed -->
+                </ul>
+            </section>
+            <section id="safety">
+                <h3>Safety Concerns</h3>
+                <!-- Add content here -->
+            </section>
+        </aside>
+        <article id="popular-hikes">
+            <h3>Top Hikes</h3>
+            <ul>
+                <li>Hike 1</li>
+                <li>Hike 2</li>
+                <!-- Add more hikes as needed -->
+            </ul>
+        </article>
     </main>
     <footer>
-        <!-- Footer content -->
+        <p>Footer content goes here</p>
     </footer>
-    <script src="scripts.js"></script>
 </body>
 </html>
