--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <aside>
             <section id="weather">
                 <h3>Weather Warnings</h3>
+                <script src="script.js"></script>
                 <ul>
                     <li>Warning 1</li>
                     <li>Warning 2</li>
