--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
         <aside>
             <section id="weather">
                 <h3>Weather Warnings</h3>
-                <script src="script.js"></script>
-                <ul>
-                    <li>Warning 1</li>
-                    <li>Warning 2</li>
-                    <!-- Add more warnings as needed -->
+                <!-- Weather warnings will be inserted here by script.js -->
+                <ul id="warningList">
+                    <!-- Warning list items will be added by JavaScript -->
                 </ul>
             </section>
             <section id="safety">
@@ -51,5 +49,6 @@
     <footer>
         <p>Footer content goes here</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
