--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="coyotetrackslogo.jpg" alt="Coyote Tracks Logo">
+        <img src="CTLogo.jpg" alt="Coyote Tracks Logo">
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
