--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </section>
         <aside>
             <section id="weather">
+                <script src="script.js"></script>
                 <h3>Weather Warnings</h3>
                 <!-- Weather warnings will be inserted here by script.js -->
                 <ul id="warningList">
