--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
             <button id="findHikeBtn">Find My Hike</button>
         </section>
         <aside>
-            <section id="weather">
-                <script src="script.js"></script>
+            <section id="weather_warnings">
                 <h3>Weather Warnings</h3>
                 <!-- Weather warnings will be inserted here by script.js -->
                 <ul id="warningList">
                     <!-- Warning list items will be added by JavaScript -->
                 </ul>
             </section>
+            <div id="weather">
+            </div>
             <section id="safety">
                 <h3>Safety Concerns</h3>
                 <!-- Add content here -->
